k8s/apps/web-client/overlays/dev/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-deployment
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: web
          image: vincentramaputra/viscord-web:sha-70e060a
